--- a/.gitmodules
+++ b/.gitmodules
@@ -79,6 +79,9 @@
 [submodule "sirit"]
     path = externals/sirit
     url = https://github.com/yuzu-emu/sirit
+[submodule "faad2"]
+    path = externals/faad2/faad2
+    url = https://github.com/knik0/faad2
 [submodule "library-headers"]
     path = externals/library-headers
     url = https://github.com/citra-emu/ext-library-headers.git
