externals: allow user to use system openal (#7145)

--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -344,15 +344,21 @@ endif()
 
 # OpenAL Soft
 if (ENABLE_OPENAL)
-    set(ALSOFT_EMBED_HRTF_DATA OFF CACHE BOOL "")
-    set(ALSOFT_EXAMPLES OFF CACHE BOOL "")
-    set(ALSOFT_INSTALL OFF CACHE BOOL "")
-    set(ALSOFT_INSTALL_CONFIG OFF CACHE BOOL "")
-    set(ALSOFT_INSTALL_HRTF_DATA OFF CACHE BOOL "")
-    set(ALSOFT_INSTALL_AMBDEC_PRESETS OFF CACHE BOOL "")
-    set(ALSOFT_UTILS OFF CACHE BOOL "")
-    set(LIBTYPE "STATIC" CACHE STRING "")
-    add_subdirectory(openal-soft EXCLUDE_FROM_ALL)
+    if(USE_SYSTEM_OPENAL)
+        add_library(OpenAL INTERFACE)
+        find_package(OpenAL REQUIRED)
+        target_link_libraries(OpenAL INTERFACE OpenAL::OpenAL)
+    else()
+        set(ALSOFT_EMBED_HRTF_DATA OFF CACHE BOOL "")
+        set(ALSOFT_EXAMPLES OFF CACHE BOOL "")
+        set(ALSOFT_INSTALL OFF CACHE BOOL "")
+        set(ALSOFT_INSTALL_CONFIG OFF CACHE BOOL "")
+        set(ALSOFT_INSTALL_HRTF_DATA OFF CACHE BOOL "")
+        set(ALSOFT_INSTALL_AMBDEC_PRESETS OFF CACHE BOOL "")
+        set(ALSOFT_UTILS OFF CACHE BOOL "")
+        set(LIBTYPE "STATIC" CACHE STRING "")
+        add_subdirectory(openal-soft EXCLUDE_FROM_ALL)
+    endif()
 endif()
 
 # VMA
