externals: allow user to use system Vulkan headers (#7155)

--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -376,7 +376,15 @@ endif()
 
 # vulkan-headers
 add_library(vulkan-headers INTERFACE)
-target_include_directories(vulkan-headers SYSTEM INTERFACE ./vulkan-headers/include)
+if(USE_SYSTEM_VULKAN_HEADERS)
+    find_package(Vulkan REQUIRED)
+    if(TARGET Vulkan::Headers)
+        message(STATUS "Found Vulkan headers")
+        target_link_libraries(vulkan-headers INTERFACE Vulkan::Headers)
+    endif()
+else()
+    target_include_directories(vulkan-headers SYSTEM INTERFACE ./vulkan-headers/include)
+endif()
 if (APPLE)
     target_include_directories(vulkan-headers SYSTEM INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/MoltenVK)
 endif()
