--- a/src/citra_qt/CMakeLists.txt
+++ b/src/citra_qt/CMakeLists.txt
@@ -308,7 +308,7 @@ if (NOT WIN32)
 endif()
 
 if (UNIX AND NOT APPLE)
-    target_link_libraries(citra-qt PRIVATE Qt6::DBus)
+    target_link_libraries(citra-qt PRIVATE Qt6::DBus gamemode)
 endif()
 
 target_compile_definitions(citra-qt PRIVATE
